# ConfluenceMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_confluence.py  Готово.txt  План.txt
.claude/: settings.local.json
src/confluence_mcp/: __init__.py  config.py  confluence_client.py  server.py
